--- a/charts/commons/templates/services.yaml
+++ b/charts/commons/templates/services.yaml
@@ -6,7 +6,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" $component.name) }}
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" $component.name) }}{{- with .name}}-{{ . }}{{- end }}
   labels:
     {{ include "commons.labels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" $component.name) | nindent 4 }}
   {{- with .annotations }}
@@ -17,7 +17,6 @@ spec:
   type: {{ default "ClusterIP" .type }}
   selector:
     app: {{ $component.name }}
-    {{- include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" $component.name) | nindent 6 }}
   ports:
     {{- range .ports }}
     - name: {{ .name }}
