--- a/charts/commons/tests/cnpg_test.yaml
+++ b/charts/commons/tests/cnpg_test.yaml
@@ -23,7 +23,7 @@ tests:
     documentSelector:
       kind: ConfigMap
       metadata:
-        name: test-postgres
+        name: release-name-postgres
     asserts:
       - matchRegex:
           path: data.init.sql
