--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -9,7 +9,7 @@ tests:
     documentSelector:
       kind: Secret
       metadata:
-        name: test-commons-secret
+        name: release-name-secret
     asserts:
       - equal:
           path: type
