--- a/charts/commons/tests/services_test.yaml
+++ b/charts/commons/tests/services_test.yaml
@@ -8,7 +8,7 @@ tests:
     documentSelector:
       kind: Service
       metadata:
-        name: release-name-web
+        name: RELEASE-NAME-web
     asserts:
       - equal:
           path: spec.ports[0].port
@@ -24,7 +24,7 @@ tests:
     documentSelector:
       kind: Service
       metadata:
-        name: release-name-vscode
+        name: RELEASE-NAME-vscode
     asserts:
       - equal:
           path: spec.ports[0].port
@@ -37,7 +37,7 @@ tests:
     documentSelector:
       kind: Service
       metadata:
-        name: release-name-redis
+        name: RELEASE-NAME-redis
     asserts:
       - equal:
           path: spec.ports[0].port
