--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -8,7 +8,7 @@ tests:
     documentSelector:
       kind: Ingress
       metadata:
-        name: RELEASE-NAME
+        name: test
     asserts:
       - equal:
           path: spec.rules[0].host
