--- a/charts/commons/tests/cnpg_test.yaml
+++ b/charts/commons/tests/cnpg_test.yaml
@@ -2,6 +2,8 @@ suite: Tests complets du chart commons
 templates:
   - templates/cnpg/cluster.yaml
   - templates/cnpg/init-sql.yaml
+values:
+  Release.Name: test
 
 tests:
   # --- Cluster CNPG ---
