--- a/.github/workflows/helm-tests.yml
+++ b/.github/workflows/helm-tests.yml
@@ -29,4 +29,4 @@ jobs:
         run: helm lint charts/commons
 
       - name: Run Helm unit tests
-        run: helm unittest charts/commons --release-name test
+        run: helm unittest charts/commons
