--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -1,6 +1,8 @@
 suite: Tests complets du chart commons
 templates:
   - templates/deployment.yaml
+values:
+  Release.Name: test
 
 tests:
  # --- Deployments ---
