--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -2,9 +2,8 @@ suite: Tests complets du chart commons
 templates:
   - templates/addons/redis/secret.yaml
   - templates/cnpg/secret.yaml
-values:
+set:
   Release.Name: test
-
 tests:
   # --- Secrets ---
   - it: Vérifie le Secret Redis
