--- a/charts/commons/tests/pvc_test.yaml
+++ b/charts/commons/tests/pvc_test.yaml
@@ -1,9 +1,8 @@
 suite: Tests complets du chart commons
 templates:
   - templates/pvc.yaml
-values:
+set:
   Release.Name: test
-
 tests:
   # --- PVC ---
   - it: Vérifie le PVC web-data
