--- a/charts/commons/tests/services_test.yaml
+++ b/charts/commons/tests/services_test.yaml
@@ -1,9 +1,8 @@
 suite: Tests complets du chart commons
 templates:
   - templates/services.yaml
-values:
+set:
   Release.Name: test
-
 tests:
   # --- Services ---
   - it: Vérifie le Service web
