--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -8,9 +8,8 @@ tests:
   # --- Secrets ---
   - it: Vérifie le Secret Redis
     documentSelector:
-      kind: Secret
-      metadata:
-        name: test-secret
+      path: metadata.name
+      value: test-secret
     asserts:
       - equal:
           path: type
@@ -22,9 +21,8 @@ tests:
   # --- Secret ---
   - it: Vérifie le Secret Postgres
     documentSelector:
-      kind: Secret
-      metadata:
-        name: test-postgres-secret
+      path: metadata.name
+      value: test-postgres-secret
     asserts:
       - equal:
           path: type
