--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -1,8 +1,8 @@
 suite: Tests complets du chart commons
 templates:
   - templates/ingress.yaml
-set:
-  Release.Name: test
+release:
+  name: test
 tests:
   # --- Ingress ---
   - it: Vérifie l'Ingress web
