--- a/charts/commons/tests/pvc_test.yaml
+++ b/charts/commons/tests/pvc_test.yaml
@@ -1,8 +1,8 @@
 suite: Tests complets du chart commons
 templates:
   - templates/pvc.yaml
-set:
-  Release.Name: test
+release:
+  name: test
 tests:
   # --- PVC ---
   - it: Vérifie le PVC web-data
