--- a/charts/commons/tests/services_test.yaml
+++ b/charts/commons/tests/services_test.yaml
@@ -2,8 +2,8 @@
 suite: Tests complets du chart commons
 templates:
   - templates/services.yaml
-set:
-  Release.Name: test
+release:
+  name: test
 tests:
   # --- Services ---
   - it: Vérifie le Service web
