--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -1,6 +1,6 @@
 suite: Tests complets du chart commons
 templates:
-  - templates/addons/redis/secret.yaml
+  - templates/redis/secret.yaml
   - templates/cnpg/secret.yaml
 release:
   name: test
