--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -9,7 +9,7 @@ tests:
   - it: Vérifie le Secret Redis
     documentSelector:
       path: metadata.name
-      value: test-redis-redis-secret
+      value: test-web-redis-secret
     asserts:
       - equal:
           path: type
@@ -22,7 +22,7 @@ tests:
   - it: Vérifie le Secret Postgres
     documentSelector:
       path: metadata.name
-      value: test-postgres-secret
+      value: test-web-postgres-secret
     asserts:
       - equal:
           path: type
