--- a/charts/commons/templates/redis/secret.yaml
+++ b/charts/commons/templates/redis/secret.yaml
@@ -6,7 +6,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" "redis") }}-secret
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-redis-secret
 type: Opaque
 data:
   password: {{ $password | b64enc }}
