--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -55,6 +55,7 @@ components:
           mountPath: /etc/config
     service:
       enabled: true
+      name: nginx
       type: ClusterIP
       annotations:
         metallb.universe.tf/address-pool: "default"
