--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -13,8 +13,7 @@ global:
     className: traefik
 
 components:
-  - name: web
-    deployment:
+  - deployment:
       replicas: 2
       initContainers:
         containers:
