--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -8,7 +8,7 @@ tests:
   - it: Vérifie l'Ingress web
     documentSelector:
       path: metadata.name
-      value: test-nginx
+      value: test-web
     asserts:
       - equal:
           path: spec.rules[0].host
