--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -1,15 +1,14 @@
 suite: Tests complets du chart commons
-templates:
-  - templates/redis/secret.yaml
-  - templates/cnpg/secret.yaml
 release:
   name: test
 tests:
   # --- Secrets ---
   - it: Vérifie le Secret Redis
+    templates:
+      - templates/redis/secret.yaml
     documentSelector:
       path: metadata.name
-      value: test-web-redis-secret
+      value: test-redis-secret
     asserts:
       - equal:
           path: type
@@ -20,9 +19,11 @@ tests:
 
   # --- Secret ---
   - it: Vérifie le Secret Postgres
+    templates:
+      - templates/cnpg/secret.yaml
     documentSelector:
       path: metadata.name
-      value: test-web-postgres-secret
+      value: test-postgres-secret
     asserts:
       - equal:
           path: type
