--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -82,6 +82,10 @@ components:
         accessModes: [ReadWriteOnce]
         storage: 1Gi
         storageClassName: local-path
+      - name: data-2
+        accessModes: [ReadWriteOnce]
+        storage: 2Gi
+        storageClassName: local-path
     postgres:
       enabled: true
       tag: 16
