--- a/charts/commons/tests/cnpg_test.yaml
+++ b/charts/commons/tests/cnpg_test.yaml
@@ -25,6 +25,12 @@ tests:
       path: metadata.name
       value: test-postgres-configmap
     asserts:
+      - equal:
+          path: kind
+          value: ConfigMap
+      - equal:
+          path: metadata.name
+          value: test-postgres-configmap
       - matchRegex:
           path: data.init.sql
-          pattern: "toto"
+          pattern: 'echo "toto"'
