--- a/charts/commons/tests/services_test.yaml
+++ b/charts/commons/tests/services_test.yaml
@@ -9,8 +9,20 @@ tests:
   - it: Vérifie le Service web
     documentSelector:
       path: metadata.name
-      value: test-web
+      value: test-ngnix
     asserts:
+      - equal:
+          path: kind
+          value: Service
+      - equal:
+          path: metadata.name
+          value: test-nginx
+      - equal:
+          path: spec.type
+          value: ClusterIP
+      - equal:
+          path: spec.ports[0].name
+          value: http
       - equal:
           path: spec.ports[0].port
           value: 80
@@ -18,8 +30,14 @@ tests:
           path: spec.ports[0].targetPort
           value: 8080
       - equal:
-          path: spec.selector.app
-          value: web
+          path: metadata.labels.app
+          value: nginx
+      - equal:
+          path: metadata.annotations."metallb.universe.tf/address-pool"
+          value: default
+      - equal:
+          path: metadata.annotations."prometheus.io/scrape"
+          value: "true"
 
   - it: Vérifie le Service vscode
     documentSelector:
@@ -27,8 +45,26 @@ tests:
       value: test-vscode
     asserts:
       - equal:
+          path: kind
+          value: Service
+      - equal:
+          path: metadata.name
+          value: test-vscode
+      - equal:
+          path: spec.type
+          value: ClusterIP
+      - equal:
+          path: spec.ports[0].name
+          value: http
+      - equal:
           path: spec.ports[0].port
           value: 8080
+      - equal:
+          path: spec.ports[0].targetPort
+          value: 8080
+      - equal:
+          path: metadata.labels.app
+          value: vscode
       - equal:
           path: spec.selector.app
           value: vscode
