--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -11,9 +11,9 @@ metadata:
 spec:
   replicas: {{ default 1 .replicas }}
   securityContext:
-    runAsUser: {{ default $.Values.global.securityContext.runAsUser (get .securityContext "runAsUser")}}
-    runAsGroup: {{ default $.Values.global.securityContext.runAsGroup (get .securityContext "runAsGroup") }}
-    fsGroup: {{ default $.Values.global.securityContext.fsGroup (get .securityContext "fsGroup") }}
+    runAsUser: {{- if and .securityContext .securityContext.runAsUser }} {{ .securityContext.runAsUser }} {{- else }} {{ $.Values.global.securityContext.runAsUser }} {{- end }}
+    runAsGroup: {{- if and .securityContext .securityContext.runAsGroup }} {{ .securityContext.runAsGroup }} {{- else }} {{ $.Values.global.securityContext.runAsGroup }} {{- end }}
+    fsGroup: {{- if and .securityContext .securityContext.fsGroup }} {{ .securityContext.fsGroup }} {{- else }} {{ $.Values.global.securityContext.fsGroup }} {{- end }}
   selector:
     matchLabels:
       {{- include "commons.selectorLabels" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) | nindent 6 }}
